Implemented Masking for Morgan FPs

--- a/analysis/Compute Attribution AUC.ipynb
+++ b/analysis/Compute Attribution AUC.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "younger-carroll",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "intellectual-lying",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "revised-honor",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "0.8541252818611393"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "charged-medicare",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        " <a list of 24 Patch objects>)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "activated-trash",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "european-finance",
    "metadata": {},
    "outputs": [],
@@ -2639,7 +2639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "id": "regional-bumper",
    "metadata": {},
    "outputs": [],
@@ -2653,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "improving-blast",
    "metadata": {},
    "outputs": [],
@@ -3822,28 +3822,44 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "coupled-engagement",
+   "cell_type": "markdown",
+   "id": "adjusted-jerusalem",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Morgan Attribution Scores"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "experienced-effectiveness",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "attribution_dir=f'/data/hookbill/hadfield/syntheticVS/data/pdbbind_small_filtered_test_set/attributions_dir_morgan/'\n",
+    "morgan_results = process_attribution_scores(attribution_dir)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "economic-worth",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.46919438586609663"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "morgan_results[0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -4021,9 +4037,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-DeLinker-env] *",
+   "display_name": "Python [conda env:DeLinker-env] *",
    "language": "python",
-   "name": "conda-env-anaconda3-DeLinker-env-py"
+   "name": "conda-env-DeLinker-env-py"
   },
   "language_info": {
    "codemirror_mode": {
